version/0.12/_sources/api/solver/_autosummary/settings/sample.rst.txt
:orphan:

.. _sample:

sample
======

.. currentmodule:: ansys.fluent.core.solver.settings_231.sample

.. autoclass:: sample
    :show-inheritance:
    :undoc-members:
.. rubric:: Included in:

====================================================   ======================================================================================

Parent                                                                                                                                Summary

====================================================   ======================================================================================
:ref:`weighting_variable <weighting_variable>`             Choose the weighting variable for the averaging in each bin in the data reduction.

:ref:`pick_sample_to_reduce <pick_sample_to_reduce>`             Pick a sample for which to first set-up and then perform the data reduction.

:ref:`compute_sample <compute_sample>`                                                          Compute minimum/maximum of a sample variable.

:ref:`delete_sample <delete_sample>`                                                                                 'delete_sample' command.

====================================================   ======================================================================================

