version/0.26/_sources/api/solver/_autosummary/settings/sample.rst.txt
:orphan:

.. _sample:

sample
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.sample.sample
    :show-inheritance:

.. rubric:: Included in:

====================================================   ======================================================================================

Parent                                                                                                                                Summary

====================================================   ======================================================================================
:ref:`plot_sample <plot_sample>`                                                                                       'plot_sample' command.

:ref:`write_sample <write_sample>`                                                                                    'write_sample' command.

:ref:`weighting_variable <weighting_variable_1>`           Choose the weighting variable for the averaging in each bin in the data reduction.

:ref:`pick_sample_to_reduce <pick_sample_to_reduce>`             Pick a sample for which to first set-up and then perform the data reduction.

:ref:`compute_sample <compute_sample>`                                                          Compute minimum/maximum of a sample variable.

:ref:`delete_sample <delete_sample>`                                                                                 'delete_sample' command.

====================================================   ======================================================================================

